package com.narxoz.rpg.herofactory;

import com.narxoz.rpg.hero.Hero;

public interface HeroFactory {
    Hero createHero(String name);
}
