' Generated by UML Generator
' Encoded: pLTBR-Cs4BxxLn0vqRKTj5UZDTPkibq3QL5i5jX3qGCjpTf4ADAWw0JPXt_x3YbI8YNQpkPGz69By-BCV3F3qPlQC6qEbHZL3rpkcMOLAGIhwwKnccyE1jQ5alVyCv2VHpjU0YcuBWICHawAt4geddzNrOOP9isoP7i3cdmP4J83ovet4lPzXZ-Jh3oDHSTMR0lcBrO17S_9FVeXjvw8Nh7YuM_rX4h8uz9OXc4FSCCgjWNAAdMGnd6G_wXuQGLulHJyqPdRA2M0oT6t4C4xq2eVm0uvSyTltSy9qqxkl_PznOmHS2ktN4BZynV4q_3Y6nh19rd0F16o8fh9KbLpyjxzaz-8X2V_Gd-v6uTOPx4UTP6rnZ6QjRTl_UgTCAd1DFRk0KfQuy-S22Mt6L4DA4oZSFL1tih29WBJP81LopcvuxNvjKtxOaeiVJMWZsq5UTNtK1-4iPdYzlKJAu2qaYvLnnnEnrCu7I_XT3o7Ky-j1gedBYNewF2PHg6o3aVEDYvNTshh8sq45nwnfTRisT4Nj0NDflwZiqjJyr66BJhk81gT5_5PMUAPL2126UrjUq2_lhtHhhIHjWeXM78SH5p3DIzSvwyEN9IX-IH24-Tc1qoONPkRqa7Hlh8D5znmgFqfI_V-V39NGYdpWMq4MhWBZyuENy6EFNALu18owyebTimLTCzzB_lE-KiZjyy8-yAAWZebZE3us6WJCuvDJpXZlusHvW8_exXSqs5Ail99ftcFplTPlyEGT0DreVdUS2LJyGB7XxFWBNVbiouWFcrGDtjxIbid3ibE9G5pIZhPiuEyFyBFE3x9ETxbATo6UnIIvYqhZD8-QuK6PhoVMDTj_uJAxcGwSCTfDGSRwm1Wv5gSlwm3anSuCBdWmEGb3dIbr01ek149WhrMxmq2XsXdWoRgKn8fJqdSZ1wu3rPyWB3lnmvYjj-BvmlNz0ryij6MyGtGcFEpm9iRLa3R9qDlZXblZXUzEUQzQNF-XzhWU6zmRfvnB2P-sMtcnzfNGm5u_xtwZlmJrLxImZdyhMuwc7-aVr_WUMuBEu5j4yr7fZKM_6i3ykh_bvZIkiZCAKlktunkSKxWpSoNoue-5Q_InU7MpgC6YbAhVJtOfzn-K5-psjBfrLkjQaDMWfLmDILNQ8NSxpY8qhuXypD8N2OrN7LxbsrJQtgmvyHtG3SRavocBXxFc3hcJOKCXvPkz_GAIPJfRHqozC-_0NzKot-xNLz_NNIhyWcXdsOp_s6N_NpgsSZAM1CEhUGZnbAJRuI4Utsz6Apum_rHeOrmtGwvzeGkUqE-FMEuteGTmtA3xMZrS047UlvMjvhTkRbhrnd9AfyGNsG3YUoC_A2VpRx6GOtSh7LY3e4mh3fAtERs74UCMxWL3HwcpDJmIQK1t-ibVUkqka1ZHan_0x8yLE8x
' URL: http://www.plantuml.com/plantuml/uml/pLTBR-Cs4BxxLn0vqRKTj5UZDTPkibq3QL5i5jX3qGCjpTf4ADAWw0JPXt_x3YbI8YNQpkPGz69By-BCV3F3qPlQC6qEbHZL3rpkcMOLAGIhwwKnccyE1jQ5alVyCv2VHpjU0YcuBWICHawAt4geddzNrOOP9isoP7i3cdmP4J83ovet4lPzXZ-Jh3oDHSTMR0lcBrO17S_9FVeXjvw8Nh7YuM_rX4h8uz9OXc4FSCCgjWNAAdMGnd6G_wXuQGLulHJyqPdRA2M0oT6t4C4xq2eVm0uvSyTltSy9qqxkl_PznOmHS2ktN4BZynV4q_3Y6nh19rd0F16o8fh9KbLpyjxzaz-8X2V_Gd-v6uTOPx4UTP6rnZ6QjRTl_UgTCAd1DFRk0KfQuy-S22Mt6L4DA4oZSFL1tih29WBJP81LopcvuxNvjKtxOaeiVJMWZsq5UTNtK1-4iPdYzlKJAu2qaYvLnnnEnrCu7I_XT3o7Ky-j1gedBYNewF2PHg6o3aVEDYvNTshh8sq45nwnfTRisT4Nj0NDflwZiqjJyr66BJhk81gT5_5PMUAPL2126UrjUq2_lhtHhhIHjWeXM78SH5p3DIzSvwyEN9IX-IH24-Tc1qoONPkRqa7Hlh8D5znmgFqfI_V-V39NGYdpWMq4MhWBZyuENy6EFNALu18owyebTimLTCzzB_lE-KiZjyy8-yAAWZebZE3us6WJCuvDJpXZlusHvW8_exXSqs5Ail99ftcFplTPlyEGT0DreVdUS2LJyGB7XxFWBNVbiouWFcrGDtjxIbid3ibE9G5pIZhPiuEyFyBFE3x9ETxbATo6UnIIvYqhZD8-QuK6PhoVMDTj_uJAxcGwSCTfDGSRwm1Wv5gSlwm3anSuCBdWmEGb3dIbr01ek149WhrMxmq2XsXdWoRgKn8fJqdSZ1wu3rPyWB3lnmvYjj-BvmlNz0ryij6MyGtGcFEpm9iRLa3R9qDlZXblZXUzEUQzQNF-XzhWU6zmRfvnB2P-sMtcnzfNGm5u_xtwZlmJrLxImZdyhMuwc7-aVr_WUMuBEu5j4yr7fZKM_6i3ykh_bvZIkiZCAKlktunkSKxWpSoNoue-5Q_InU7MpgC6YbAhVJtOfzn-K5-psjBfrLkjQaDMWfLmDILNQ8NSxpY8qhuXypD8N2OrN7LxbsrJQtgmvyHtG3SRavocBXxFc3hcJOKCXvPkz_GAIPJfRHqozC-_0NzKot-xNLz_NNIhyWcXdsOp_s6N_NpgsSZAM1CEhUGZnbAJRuI4Utsz6Apum_rHeOrmtGwvzeGkUqE-FMEuteGTmtA3xMZrS047UlvMjvhTkRbhrnd9AfyGNsG3YUoC_A2VpRx6GOtSh7LY3e4mh3fAtERs74UCMxWL3HwcpDJmIQK1t-ibVUkqka1ZHan_0x8yLE8x
' Generated on: 2026-03-04T12:08:51.392057500

@startuml
skinparam classAttributeIconSize 0
hide circle

class EnemyCombatantAdapter {
  -enemy: Enemy
  --
  +EnemyCombatantAdapter(enemy: Enemy)
  +getName(): String
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
}

class HeroCombatantAdapter {
  -hero: Hero
  --
  +HeroCombatantAdapter(hero: Hero)
  +getName(): String
  +getAttackPower(): int
  +takeDamage(amount: int): void
  +isAlive(): boolean
}

class BattleEngine {
  -{static} instance: BattleEngine
  -random: Random = new Random(1L)
  --
  -BattleEngine()
  +{static} getInstance(): BattleEngine
  +setRandomSeed(seed: long): BattleEngine
  +reset(): void
  +runEncounter(teamA: List<Combatant>, teamB: List<Combatant>): EncounterResult
}

interface Combatant {
  ~getName(): String
  ~getAttackPower(): int
  ~takeDamage(amount: int): void
  ~isAlive(): boolean
}

class EncounterResult {
  -winner: String
  -rounds: int
  -battleLog: List<String> = new ArrayList<>()
  --
  +setWinner(winner: String): void
  +setRounds(rounds: int): void
  +addLog(line: String): void
  +getWinner(): String
  +getRounds(): int
  +getBattleLog(): List<String>
}

class BasicEnemyBuilder {
  -name: String
  -health: int
  -damage: int
  -abilities: List<Ability> = new ArrayList<>()
  -lootTable: LootTable
  -aiBehavior: String
  --
  +setName(name: String): BasicEnemyBuilder
  +setHealth(health: int): BasicEnemyBuilder
  +setDamage(damage: int): BasicEnemyBuilder
  +addAbility(ability: Ability): BasicEnemyBuilder
  +setLootTable(lootTable: LootTable): BasicEnemyBuilder
  +setAI(aiBehavior: String): BasicEnemyBuilder
}

interface Ability {
  ~getName(): String
  ~getPower(): int
  ~getDescription(): String
  ~clone(): Ability
}

class IceAbility {
  -name: String
  -power: int
  --
  +IceAbility(name: String, power: int)
  +getName(): String
  +getPower(): int
  +getDescription(): String
  +clone(): Ability
}

interface EnemyComponentFactory {
  ~createAbilities(): List<Ability>
  ~createLootTable(): LootTable
  ~createAIBehavior(): String
}

class IceComponentFactory {
  +createAbilities(): List<Ability>
  +createLootTable(): LootTable
  +createAIBehavior(): String
}

class BasicEnemy {
  -title: String
  -damage: int
  -health: int
  --
  +BasicEnemy(title: String, damage: int, health: int)
  +getTitle(): String
  +getDamage(): int
  +applyDamage(amount: int): void
  +isDefeated(): boolean
  +getHealth(): int
}

interface Enemy {
  ~getTitle(): String
  ~getDamage(): int
  ~applyDamage(amount: int): void
  ~isDefeated(): boolean
}

class Goblin {
  +Goblin()
}

interface Hero {
  ~getName(): String
  ~getPower(): int
  ~receiveDamage(amount: int): void
  ~isAlive(): boolean
}

class Mage {
  -name: String
  -power: int
  -health: int
  --
  +Mage(name: String)
  +getName(): String
  +getPower(): int
  +receiveDamage(amount: int): void
  +isAlive(): boolean
  +getHealth(): int
}

class Warrior {
  -name: String
  -power: int
  -health: int
  --
  +Warrior(name: String)
  +getName(): String
  +getPower(): int
  +receiveDamage(amount: int): void
  +isAlive(): boolean
  +getHealth(): int
}

interface HeroFactory {
  ~createHero(name: String): Hero
}

class MageFactory {
  +createHero(name: String): Hero
}

class WarriorFactory {
  +createHero(name: String): Hero
}

class IceLootTable {
  -drops: List<String> = Arrays.asList("Frost Blade", "Ice Shield", "Frozen Core")
  --
  +getDrops(): List<String>
  +clone(): LootTable
}

interface LootTable {
  ~getDrops(): List<String>
  ~clone(): LootTable
}

class Main {
  +{static} main(args: String[]): void
}

EnemyCombatantAdapter ..|> Combatant
EnemyCombatantAdapter *-- Enemy
HeroCombatantAdapter ..|> Combatant
HeroCombatantAdapter *-- Hero
BattleEngine *-- BattleEngine
BattleEngine ..> EncounterResult
BasicEnemyBuilder o-- Ability
BasicEnemyBuilder *-- LootTable
BasicEnemyBuilder ..> BasicEnemyBuilder
Ability ..> Ability
IceAbility ..|> Ability
EnemyComponentFactory ..> LootTable
IceComponentFactory ..|> EnemyComponentFactory
IceComponentFactory ..> LootTable
BasicEnemy ..|> Enemy
Goblin --|> BasicEnemy
Mage ..|> Hero
Warrior ..|> Hero
HeroFactory ..> Hero
MageFactory ..|> HeroFactory
MageFactory ..> Hero
WarriorFactory ..|> HeroFactory
WarriorFactory ..> Hero
IceLootTable ..|> LootTable
LootTable ..> LootTable
@enduml